Dark mode tag fix

--- a/themes/linuscodes/static/css/pages/_project-detail.scss
+++ b/themes/linuscodes/static/css/pages/_project-detail.scss
@@ -28,10 +28,16 @@
          padding: 5px 15px;
          border-radius: 20px;
          color: $black;
-         background: $graySecondary;
+         background: $white;
          border: 1px solid lighten($black, 95%);
          display: inline-block;
          font-size: 13px;
+
+         @media (prefers-color-scheme: dark) {
+            background: $grayDark;
+            color: darken($white, 30%);
+            border: 1px solid rgba($white, .05);
+         }
 
          &:not(:last-child) {
             margin-right: 5px;
